# wpe-testbed-wayland

./: Application.cpp  Application.h  CMakeLists.txt  DMABuffer.cpp  DMABuffer.h  DRM.cpp  DRM.h  EGL.cpp  EGL.h  GBM.cpp  GBM.h  LICENSE  Logger.h  README.md  Statistics.cpp  Statistics.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h  Utilities.cpp  Utilities.h  Wayland.cpp  Wayland.h  WaylandWindow.cpp  WaylandWindow.h  main-wayland.cpp
cmake/: FindWaylandProtocols.cmake
docs/: etnaviv.md
scripts/: compare-tile-update-methods-small-tile-unbounded.sh  compare-tile-update-methods-small-tile.sh  test-tile-buffer-modifiers.sh  test-tile-window-buffer-combinations.sh
